[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whatamithinking-protolib"
description = "Foundational base classes/protocols used to manage state and provide clear errors"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Connor Sherwood Maynes", email = "connormaynes@gmail.com" },
]
keywords = ["asyncio"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["whatamithinking-aiotools"]
requires-python = ">=3.12"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black"]

[tool.setuptools]
# Ensures setuptools finds your nested package structure
packages = ["whatamithinking", "whatamithinking.protolib"]

[tool.setuptools.dynamic]
version = { attr = "whatamithinking.protolib.__init__.__version__" }

[project.urls]
Homepage = "https://github.com/whatamithinking/protolib"
Source = "https://github.com/whatamithinking/protolib"
